<resources>
    <string name="app_name">Diansay_Calculator</string>
    <string name="button_addition_text">+</string>
    <string name="button_subtraction_text">-</string>
    <string name="button_divide_text">/</string>
    <string name="button_multiplication_text">*</string>
    <string name="first_variable">First Variable</string>
    <string name="second_variable">Second Variable</string>
    <string name="button_modulo_text">%</string>
    <string name="blank_text">Blank</string>
    <string name="constant_text1">The result is\t</string>
</resources>