<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="56dp"
        android:text="@string/button_multiplication_text"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSecondVariable" />

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:text="@string/button_subtraction_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_addition"
        app:layout_constraintTop_toTopOf="@+id/button_addition" />

    <Button
        android:id="@+id/button_addition"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:text="@string/button_addition_text"
        app:layout_constraintEnd_toStartOf="@+id/button_subtraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDivide"
        app:layout_constraintTop_toTopOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:text="@string/button_divide_text"
        app:layout_constraintEnd_toStartOf="@+id/button_addition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_multiplication"
        app:layout_constraintTop_toTopOf="@+id/button_multiplication" />

    <TextView
        android:id="@+id/FirstVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/first_variable"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SecondVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/second_variable"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberFirstVariable" />

    <EditText
        android:id="@+id/editTextNumberFirstVariable"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstVariable" />

    <EditText
        android:id="@+id/editTextNumberSecondVariable"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondVariable" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="163dp"
        android:layout_height="74dp"
        android:layout_marginTop="152dp"
        android:text="@string/button_equals_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSecondVariable" />

    <TextView
        android:id="@+id/Blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constant_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/constant_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constant_text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Blank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

</androidx.constraintlayout.widget.ConstraintLayout>